--- a/section-09-dynamic routes/views/shop/cart.ejs
+++ b/section-09-dynamic routes/views/shop/cart.ejs
@@ -1,13 +1,6 @@
-<!DOCTYPE html>
-<html lang='en'>
-<%- include('../includes/head') %>
-<body>
-<%- include('../includes/header') %>
-<main class='container'>
-    <div class='col'>
-        <h1><%= pageTitle %></h1>
-        <hr class='mb-4'>
-    </div>
-</main>
-</body>
-</html>
+<%- include('../includes/head.ejs') %>
+    </head>
+
+    <body>
+        <%- include('../includes/navigation.ejs') %>
+        <%- include('../includes/end.ejs') %>
