--- a/section-09-dynamic routes/public/css/forms.css
+++ b/section-09-dynamic routes/public/css/forms.css
@@ -1,28 +1,40 @@
-/* --- Form Styling --- */
-
-.product-form{
-  width: 20rem;
-  max-width: 90%;
-  margin: 0 auto;
-}
-
 .form-control {
-  margin-bottom: 15px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  min-width: 250px;
+  margin-bottom: 1rem;
 }
-
 .form-control label {
-  font-weight: 500;
+  width: 120px;
+  padding-top: 0.5rem;
+  margin-bottom: 0.5rem;
 }
-
-.form-control label,
 .form-control input {
-  display: block;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  max-width: 400px;
 }
-
+.form-control textarea {
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  resize: vertical;
+}
 .form-control input,
 .form-control textarea {
-  border: 1px solid #029c88;
+  border: 1px solid #a1a1a1;
   font: inherit;
+  padding: 0.5rem 0.75rem;
+  border-radius: 2px;
 }
-
-/* --- END Form Styling --- */
+.form-control input:focus,
+.form-control textarea:focus {
+  outline-color: #00695c;
+}
+.form-control .resize-disabled {
+  resize: none;
+}
