--- a/section-09-dynamic routes/views/admin/products.ejs
+++ b/section-09-dynamic routes/views/admin/products.ejs
@@ -1,38 +1,44 @@
-<!DOCTYPE html>
-<html lang='en'>
-<%- include('../includes/head') %>
-<body>
-<%- include('../includes/header') %>
-    <main class='container'>
-        <div class='col'>
-            <h1><%= pageTitle %></h1>
-            <hr class='mb-4'>
-            <%_ if (locals.products && products.length) { -%>
-            <form class="grid" method='POST'>
-                <%_ for ({title, imageUrl, description, price} of products) { -%>
-                <fieldset class="card product-item">
-                    <header class="card-header">
-                        <h1 class="product-title"><%= title %></h1>
-                    </header>
-                    <div class="card-image">
-                        <img src="/images/<%= imageUrl %>" alt="<%= title %>"/>
-                    </div>
-                    <div class="card-content">
-                        <h2 class="product-price">£<%= price %></h2>
-                        <p class="product-description"><%= description %></p>
-                    </div>
-                    <div class="card-actions">
-                        <button type='submit' class='btn' name='edit' value='<%= title %>' formaction='/admin/edit-product'>Edit</button>
-                        <button type='submit' class='btn' name='delete' value='<%= title %>' formaction='/admin/delete-product'>Delete</button>
-                    </div>
-                </fieldset>
-                <%_ } -%>
-            <%_ } else { -%>
-                <h1>No Products Found</h1>
-            <%_ } -%>
-            </form>
-        </div>
-    </main>
-</body>
-</html>
+<%- include('../includes/head.ejs') %>
+    <link rel='stylesheet' href='/css/product.css'>
+    </head>
 
+    <body>
+        <%- include('../includes/navigation.ejs') %>
+
+            <main>
+                <% if (prods.length > 0) { %>
+                    <section class='grid .product-list'>
+                        <% for (let product of prods) { %>
+                            <article class='card product-item'>
+                                <h1 class='card__title'>
+                                    <%= product.title %>
+                                </h1>
+                                <div class='card__image'>
+                                    <img
+                                        src='<%= product.imageUrl %>'
+                                        alt='<%= product.title %>'
+                                    >
+                                </div>
+                                <div class='card__content'>
+                                    <h2 class='product-item__price'>
+                                        £<%= product.price %>
+                                    </h2>
+                                    <p class='product-item__summary'>
+                                        <%= product.summary %>
+                                    </p>
+                                </div>
+                                <div class='card__actions'>
+                                    <a href='/admin/edit-product/<%= product.id  %>?edit=true' class='btn'>Edit</a>
+                                    <form action='/admin/delete-product' method='POST'>
+                                        <button class='btn' type='submit'>Delete</button>
+                                        <input type='hidden' name='product-id' value='<%= product.id  %>'>
+                                    </form>
+                                </div>
+                            </article>
+                            <% } %>
+                    </section>
+                    <% } else { %>
+                        <h1>No Products Found!</h1>
+                        <% } %>
+            </main>
+            <%- include('../includes/end.ejs') %>
