--- a/section-09-dynamic routes/views/scss/main.scss
+++ b/section-09-dynamic routes/views/scss/main.scss
@@ -1,364 +1,89 @@
-@import 'imports/variables.scss';
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&family=Roboto:wght@300;400;500&family=Work+Sans:wght@300;400;500&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap');
+
+@import 'imports/normalize.scss';
+
+@import 'imports/reset.scss';
+
+@import 'imports/functions.scss';
+
+:root {
+  --min-width: 480px;
+}
 
 body {
-	font: 300 1rem 'Roboto', arial, sans-serif;
-	color: $text;
+  font-family: 'Poppins', sans-serif;
+}
+
+p {
+  font-weight: 400;
+}
+
+h1,
+h2,
+h3 {
+  font-family: 'Poppins', sans-serif;
+  font-weight: 300;
+  margin-bottom: .5rem;
 }
 
 h1 {
-	font-size: 1.1rem;
-	font-weight: 500;
-	margin-bottom: .5rem;
+  font-size: simple_clamp(1.4rem, 2rem, 460px, 768px);
+  margin-bottom: .75rem;
 }
 
 h2 {
-	font-size: 1.1rem;
-	font-weight: 300;
-	margin-bottom: .5rem;
+  font-size: simple_clamp(1.3rem, 1.5rem, 460px, 768px);
 }
 
 h3 {
-	font-size: 1.1rem;
-	font-weight: 300;
-	margin-bottom: .5rem;
+  font-weight: 400;
+  font-size: simple_clamp(1.1rem, 1.3rem, 460px, 768px);
 }
 
-a {
-	color: #fff;
-	text-decoration: none;
+p {
+  font-size: simple_clamp(.95rem, 1.05rem, 460px, 768px);
+  margin-bottom: 1rem;
 }
-
-li, a, button {
-	transition: all .2s linear;
-	transition-property: color, background-color, box-shadow, border;
-}
-
-/* ---- header and navbar ---- */
-
-header {
-	width: 100%;
-	background-color: $nav-bg;
-	color: $light-text;
-}
-
-.bg-brand-header {
-  background-color: transparent;
-}
-
-.nav-link,
-.navbar-brand {
-	display: flex;
-	align-items: center;
-}
-
-.navbar {
-	padding: 0px;
-}
-
-.navbar-brand {
-	height: 60px;
-	margin-right: 15px;
-}
-
-.navbar-dark .navbar-nav .nav-link {
-  color: $light-text;
-	padding-left: 15px;
-	padding-right: 15px;
-	letter-spacing: 0.75px;
-	font-size: .9rem;
-	border-bottom: 2px solid transparent;
-}
-
-.navbar-toggler:focus {
-  box-shadow: 0 0 0 .1rem;
-}
-
-.navbar-dark .nav-item.active .nav-link,
-.navbar-dark .nav-item:hover .nav-link {
-  color: $gold;
-}
-
-.navbar-nav {
-	padding-bottom: 25px;
-}
-
-@media only screen and (min-width: 768px) {
-
-	.navbar-nav {
-		padding-bottom: 0;
-	}
-
-	.nav-link {
-		height: 60px;
-	}
-
-  .navbar-dark .nav-item.active .nav-link,
-  .navbar-dark .nav-item:hover .nav-link {
-    border-color: $gold;
-  }
-}
-
-/* ---- END header and navbar ---- */
 
 main {
-	padding: 30px;
+  padding: 6rem 2rem 2rem;
 }
 
-.card {
-	width: 300px;
-	box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
-	margin-bottom: 2rem;
+section {
+  margin-bottom: 1rem;
 }
 
-.card-header,
-.card-content {
-	padding: 1rem;
+.text__secondary {
+  color: #9e866b;
 }
 
-.card-header {
-	background-color: #7ca0ae;
+.bold {
+  font-weight: 400;
 }
 
-.card-title {
-	font-weight: 500;
+.centered {
+  display: flex;
+  justify-content: center;
 }
 
-.card .btn {
-	padding: 10px 25px;
-	text-transform: uppercase;
-	font-size: .85rem;
-	font-weight: 700;
-	color: $light-text;
-}
-
-.card-content h1,
-.card-content h2,
-.card-content p {
-	margin-bottom: .25rem;
-}
-
-.card-content p {
-	font-size: .85rem;
-	font-weight: 500;
-	line-height: 1.3rem;
-}
-
-.card-image {
-	width: 100%;
-	padding-top: 1rem;
-}
-
-.card-image img {
-	max-width: 60%;
-}
-
-.card-text {
-	font-size: .85rem;
-	font-weight: 500;
-	line-height: 1.3rem;
-}
-
-.card-actions {
-	padding: 0 1rem 1.5rem;
-	text-align: center;
-}
-
-.card-actions button,
-.card-actions a {
-	margin: 0 0.25rem;
-}
-
-.product-price {
-	color: $text;
-	font-weight: 700;
-}
-
-.btn-cart {
-	background-color: rgb(85, 85, 85);
-	color: $light-text;
-}
-
-/*
-label {
-	font-weight: 500;
-	margin-bottom: .35rem;
-	color: #656565;
-}
-
-input,
-textarea {
-	width: 100%;
-	border-radius: 3px;
-	letter-spacing: .5px;
-	padding: 10px;
-	resize: none;
-}
-
-input:focus,
-textarea:focus {
-	outline: none;
-	background-color: #eef;
-}
-
-button {
-	outline: none!important;
-	cursor: pointer;
-	font: inherit;
-	font-size: .85rem;
-	font-weight: 700;
-	letter-spacing: .35px;
-	padding: 5px 15px;
-	color:#029c88;
-	background-color: transparent;
-	border: 1px solid #029c88;
-	border-radius: 3px;
-	text-transform: uppercase;
-}
-
-button.cart {
-	padding: 10px 25px;
-	color: #eee;
-	background-color: #555;
-	border: none;
-}
-
-button:hover,
-button:active {
-	/* styles to go in here
-}
-
-button.cart:hover,
-button.cart:active {
-	background-color: #333;
-}
-
-hr {
-	border-top: 1px solid #aaa;
-}
-
-/* --- Navigation Menu ---
-
-.main-nav .item-list {
-	display: flex;
-}
-
-.main-nav .item-list > .item{
-	display: flex;
-	font-size: .9rem;
-	border-bottom: 4px solid transparent;
-}
-
-.main-nav .item-list > .item a {
-	letter-spacing: .75px;
-	padding: 20px 25px;
-}
-
-.main-nav li:active a,
-.main-nav li.active a{
-	color: #f8d300;
-}
-
-.main-nav .item-list > .item:hover,
-.main-nav .item-list > .item.active {
-	border-color: orange;
-}
-
-/* --- END Navigation Menu --- */
-
-/* --- grid ---
-
-.container {
-	width: 100%;
-	padding-right: 50px;
-	padding-left: 50px;
-	margin-right: auto;
-	margin-left: auto;
-}
-
-.row {
-	display: flex;
-	flex-wrap: wrap;
-	margin-right: -15px;
-	margin-left: -15px;
-}
-
-.col {
-	flex: 0 0 100%;
-	max-width: 100%;
+.price {
+  font-weight: 400;
+  font-family: 'Roboto', sans-serif;
 }
 
 .grid {
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: space-between;
+  display: grid;
+  grid-template-columns: repeat( auto-fit, 400px );
+  justify-content: space-evenly;
+  place-items: center;
 }
 
-/* --- margins ---
+/* Header */
+@import 'imports/header.scss';
 
-.mb-3 {
-	margin-bottom: 1rem !important;
-}
-
-.mb-4 {
-	margin-bottom: 1.5rem !important;
-}
-
-.mb-5 {
-	margin-bottom: 3rem !important;
-}
+/* Cards */
+@import 'imports/cards.scss';
 
 
-/* --- cards ---
-
-.card {
-	max-width: 300px;
-	box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
-	margin-bottom: 2rem;
-}
-
-.card-header,
-.card-content {
-	text-align: center;
-	padding: 1rem;
-}
-
-.card-header {
-	background-color: #7ca0ae;
-}
-
-.card-content {
-	padding-top: .5rem;
-}
-
-.card-content h1,
-.card-content h2,
-.card-content p {
-	text-align: center;
-	margin-bottom: .25rem;
-}
-
-.card-content p {
-	font-size: .85rem;
-	font-weight: 500;
-	line-height: 1.3rem;
-}
-
-.card-image {
-	width: 100%;
-	text-align: center;
-	padding-top: 1rem;
-}
-
-.card-image img {
-	max-width: 60%;
-}
-
-.card-actions {
-	padding: 0 1rem 1.5rem;
-	text-align: center;
-}
-
-.card-actions button,
-.card-actions a {
-	margin: 0 0.25rem;
-} */
