--- a/section-09-dynamic routes/views/shop/index.ejs
+++ b/section-09-dynamic routes/views/shop/index.ejs
@@ -1,36 +1,38 @@
-<!DOCTYPE html>
-<html lang='en'>
-<%- include('../includes/head') %>
+<%- include('../includes/head.ejs') %>
+    <link rel="stylesheet" href="/css/product.css">
+</head>
+
 <body>
-<%- include('../includes/header') %>
-    <main class='container'>
-        <div class='col'>
-            <h1><%= pageTitle %></h1>
-            <hr class='mb-4'>
-            <%_ if (locals.products && products.length) { -%>
+    <%- include('../includes/navigation.ejs') %>
+
+    <main>
+        <% if (prods.length > 0) { %>
             <div class="grid">
-                <%_ for ({title, imageUrl, description, price} of products) { -%>
-                <article class="card product-item">
-                    <header class="card-header">
-                        <h1 class="product-title"><%= title %></h1>
-                    </header>
-                    <div class="card-image">
-                        <img src="/images/<%= imageUrl %>" alt="<%= title %>"/>
-                    </div>
-                    <div class="card-content">
-                        <h2 class="product-price">£<%= price %></h2>
-                        <p class="product-description"><%= description %></p>
-                    </div>
-                    <div class="card-actions">
-                        <button class="btn cart">Add to Cart</button>
-                    </div>
-                </article>
-                <%_ } -%>
-            <%_ } else { -%>
-                <h1>No Products Found</h1>
-            <%_ } -%>
+                <% for (let product of prods) { %>
+                    <article class="card product-item">
+                        <h1 class="card__title"><%= product.title %></h1>
+                        <div class="card__image">
+                            <img
+                                src="<%= product.imageUrl %>"
+                                alt="<%= product.title %>"
+                            >
+                        </div>
+                        <div class="card__content">
+                            <h2 class="product-item__price">£<%= product.price %></h2>
+                            <p class="product-item__summary"><%= product.summary %></p>
+                        </div>
+                        <div class="card__actions">
+                            <!--
+                                Inside a for loop 'product' is a local variable and we must pass it explicitly
+                                to the ejs template file
+                            -->
+                            <%- include('../includes/add-to-cart.ejs', { product }) %>
+                        </div>
+                    </article>
+                <% } %>
             </div>
-        </div>
+        <% } else { %>
+            <h1>No Products Found!</h1>
+        <% } %>
     </main>
-</body>
-</html>
+<%- include('../includes/end.ejs') %>
