--- a/section-09-dynamic routes/views/shop/orders.ejs
+++ b/section-09-dynamic routes/views/shop/orders.ejs
@@ -1,13 +1,9 @@
-<!DOCTYPE html>
-<html lang='en'>
-<%- include('../includes/head') %>
-<body>
-<%- include('../includes/header') %>
-<main class='container'>
-    <div class='col'>
-        <h1><%= pageTitle %></h1>
-        <hr class='mb-4'>
-    </div>
-</main>
-</body>
-</html>
+<%- include('../includes/head.ejs') %>
+    </head>
+
+    <body>
+        <%- include('../includes/navigation.ejs') %>
+        <main>
+            <h1>Nothing there!</h1>
+        </main>
+        <%- include('../includes/end.ejs') %>
