--- a/section-09-dynamic routes/views/admin/edit-product.ejs
+++ b/section-09-dynamic routes/views/admin/edit-product.ejs
@@ -1,3 +1,5 @@
+<%# Combined add-product and edit-product into one template #%>
+
 <%- include('../includes/head.ejs') %>
     <link rel='stylesheet' href='/css/forms.css'>
     <link rel='stylesheet' href='/css/product.css'>
