update to views cart

--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -1,6 +1,6 @@
 <%- include('../includes/head.ejs') %>
     </head>
-
+    <!-- test to see if this is being pushed properly -->
     <body>
         <%- include('../includes/navigation.ejs') %>
         <main>
