updates to cart

--- a/section-09-dynamic routes/views/admin/edit-product.ejs
+++ b/section-09-dynamic routes/views/admin/edit-product.ejs
@@ -43,12 +43,12 @@
                 >
             </div>
             <div class='form-control'>
-                <label for='imageUrl'>Image URL</label>
+                <label for='image'>Image File</label>
                 <input
                     type='text'
-                    name='imageUrl'
-                    id='imageUrl'
-                    value='<%- product?.imageUrl %>'
+                    name='image'
+                    id='image'
+                    value='<%- product?.image %>'
                 >
             </div>
             <div class='form-control'>
