--- a/section-09-dynamic routes/views/shop/product-list.ejs
+++ b/section-09-dynamic routes/views/shop/product-list.ejs
@@ -15,13 +15,13 @@
                                 </h1>
                                 <div class='card__image'>
                                     <img
-                                        src='<%= product.imageUrl %>'
+                                        src='/images/<%= product.image ? product.image : "no-image.png" %>'
                                         alt='<%= product.title %>'
                                     >
                                 </div>
                                 <div class='card__content'>
                                     <h2 class='product-item__price'>
-                                        £<%= product.price %>
+                                        <%- formatCurrency(product.price) %>
                                     </h2>
                                     <p class='product-item__summary'>
                                         <%= product.summary %>
