--- a/section-11-understanding-sequelize/views/admin/products.ejs
+++ b/section-11-understanding-sequelize/views/admin/products.ejs
@@ -31,7 +31,7 @@
                                     <a href='/admin/edit-product/<%= product.id  %>?edit=true' class='btn'>Edit</a>
                                     <form action='/admin/delete-product' method='POST'>
                                         <button class='btn' type='submit'>Delete</button>
-                                        <input type='hidden' name='product-id' value='<%= product.id  %>'>
+                                        <input type='hidden' name='id' value='<%= product.id  %>'>
                                     </form>
                                 </div>
                             </article>
