--- a/section-11-understanding-sequelize/views/scss/main.scss
+++ b/section-11-understanding-sequelize/views/scss/main.scss
@@ -68,6 +68,10 @@ section {
   justify-content: center;
 }
 
+.align-right {
+  text-align: right;
+}
+
 .price {
   font-weight: 400;
   font-family: 'Roboto', sans-serif;
