--- a/section-11-understanding-sequelize/views/shop/orders.ejs
+++ b/section-11-understanding-sequelize/views/shop/orders.ejs
@@ -1,9 +1,56 @@
 <%- include('../includes/head.ejs') %>
+    <link rel='stylesheet' href='/css/order.css'>
     </head>
-
     <body>
         <%- include('../includes/navigation.ejs') %>
         <main>
-            <h1>Nothing there!</h1>
+        <% if (orders?.length > 0) { %>
+            <div class='shopping-order-container'>
+                <!-- Each order -->
+                <% for (let order of orders) { %>
+
+                    <section class='order-items-container'>
+                        <h2 class='order-header'>Order ID: <%- order.id -%></h2>
+                        <ul class='order-items'>
+                        <!-- Each item -->
+                        <% for (let item of order.items) { %>
+
+                            <li class='order-item'>
+                                <div class='order-item-info-container'>
+                                    <img src='/images/order-images/<%- item?.image %>' class='order-image' alt=''>
+                                    <div class='order-item-info'>
+                                        <h3 class='order-item-title'><%- item?.title %></h3>
+                                        <p class='order-item-price'><%- formatCurrency(item?.price) %></p>
+                                    </div>
+                                </div>
+                                <div class='order-item-checkout-container'>
+                                    <p>Quantity <%- item?.quantity %></p>
+                                    <p><%- formatCurrency(item?.subTotal) %></p>
+                                </div>
+                            </li>
+                        <% } %>
+                        <!-- Each item END -->
+                        </ul>
+                        <h4 class='align-right order-total'>Total: <%- formatCurrency(order?.totalPrice) %></h4>
+                    </section>
+
+                <% } %>
+                <!-- Each order END -->
+                <!--section class='order-total-container'>
+                    <div class='order-total'>
+                        <dl>
+                            <dt>Delivery Cost</dt>
+                            <dd>FREE</dd>
+                        </dl>
+                        <dl class='total'>
+                            <dt>Total</dt>
+                            <dd class='order-item-total'><%- formatCurrency(totalPrice) %></dd>
+                        </dl>
+                    </div>
+                </section-->
+            </div>
+        <% } else { %>
+            <h1>You have no orders!</h1>
+        <% } %>
         </main>
-        <%- include('../includes/end.ejs') %>
+    <%- include('../includes/end.ejs') %>
