--- a/section-11-understanding-sequelize/views/admin/edit-product.ejs
+++ b/section-11-understanding-sequelize/views/admin/edit-product.ejs
@@ -21,6 +21,7 @@
                     name='title'
                     id='title'
                     value='<%- product?.title %>'
+                    required
                 >
             </div>
             <div class='form-control'>
@@ -30,6 +31,7 @@
                     name='author'
                     id='author'
                     value='<%- product?.author %>'
+                    required
                 >
             </div>
             <div class='form-control'>
@@ -40,6 +42,7 @@
                     id='published'
                     placeholder='January 1st 2022'
                     value='<%- product?.published %>'
+                    required
                 >
             </div>
             <div class='form-control'>
@@ -59,6 +62,7 @@
                     id='price'
                     step='0.01'
                     value='<%- product?.price %>'
+                    required
                 >
             </div>
             <div class='form-control'>
@@ -69,6 +73,7 @@
                     id='summary'
                     rows='3'
                     maxlength='100'
+                    required
                 ><%- product?.summary %></textarea>
             </div>
             <div class='form-control'>
@@ -77,6 +82,7 @@
                     name='description'
                     id='description'
                     rows='7'
+                    required
                 ><%- product?.description %></textarea>
             </div>
             <button class='btn' type='submit'><%- buttonTitle %></button>
